--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ss-hogan"     : "0.1.x",
     "express"      : "3.1.0",
     "mongoose"     : "3.2.0",
-    "connect"      : "1.8.7"
+    "connect"      : "1.8.7",
+    "gridfs-stream" : "0.4.0"
   },
   "scripts" : {
     "start":"node app.js"
